Add get boiler temperature
